<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/home_info_window_prev_button"
            android:layout_width="@dimen/info_window_buttom_width"
            android:layout_height="@dimen/info_window_button_height"
            android:src="@drawable/back"
            android:scaleType="fitCenter"
            android:background="@drawable/info_window_button_outline"
            android:layout_gravity="center"
            android:contentDescription="@string/description_info_window_next_button"/>

        <LinearLayout
            android:id="@+id/home_info_window_layout"
            android:layout_width="@dimen/info_window_layout"
            android:layout_height="@dimen/info_window_layout"
            android:orientation="vertical"
            android:background="@drawable/info_window_layout_outline">

            <LinearLayout
                android:id="@+id/home_info_window_top_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_margin"

                android:layout_marginTop="@dimen/common_margin">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center">

                    <TextView
                        android:id="@+id/home_info_window_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/common_margin"
                        android:gravity="bottom"
                        android:text="@string/ex_calendar_title"
                        android:autoSizeTextType="uniform"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/home_info_window_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/sub_margin"
                        android:gravity="bottom"
                        android:text="@string/ex_calendar_order"
                        android:autoSizeTextType="uniform"
                        android:textStyle="bold"
                        android:textColor="@color/highlight_color"
                        />

                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/home_info_window_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:layout_marginEnd="@dimen/common_margin"
                    android:gravity="bottom"
                    android:text="@string/ex_calendar_date"
                    android:autoSizeTextType="uniform"
                    android:textStyle="bold"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/home_info_window_image"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                android:src="@drawable/mypage"
                android:contentDescription="@string/description_example_calendar_image"/>

            <LinearLayout
                android:id="@+id/home_info_window_bottom_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/main_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_info_window_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ex_calendar_place"
                    android:autoSizeTextType="uniform"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/home_info_window_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/sub_margin"
                    android:text="@string/ex_calendar_address"
                    android:autoSizeTextType="uniform"
                    android:textColor="@color/gray"
                    android:ellipsize="end"
                    android:maxLines="1"/>
                <TextView
                    android:id="@+id/home_info_window_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ex_calendar_review"
                    android:autoSizeTextType="uniform"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="2"
                    />

            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/home_info_window_next_button"
            android:layout_width="@dimen/info_window_buttom_width"
            android:layout_height="@dimen/info_window_button_height"
            android:src="@drawable/back"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:background="@drawable/info_window_button_outline"
            android:layout_gravity="center"
            android:contentDescription="@string/description_info_window_next_button"/>

    </LinearLayout>

</FrameLayout>